# Gambling-Bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  compose.yml
src/: Errors.rs  constants.rs  main.rs  secrets.rs
src/commands/: help.rs  mod.rs  money.rs  poker.rs  roulette.rs
src/commands/blackjack/: blackjack.rs
src/commands/money/: bal.rs  mod.rs  money.rs
src/commands/poker/: mod.rs  poker.rs  poker_discard.rs  poker_draw.rs
src/commands/roulette/: mod.rs  roulette.rs  roulette_bet.rs  roulette_odds.rs
src/redis/: channels.rs  cleanup.rs  decks.rs  mod.rs  poker.rs  roulette.rs  users.rs
src/sql/: delete.rs  insert.rs  mod.rs  select.rs  statements.rs
src/sql/structs/: mod.rs
src/utils/: card_ascii.rs  cleanup.rs  command_handler.rs  component_handler.rs  deck.rs  mod.rs  poker.rs  roulette.rs
