[package]
name = "gambling-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-log = "2.0.0"
mysql_async = "0.31.3"
redis = "0.22.3"
serde = "1.0.159"
serenity = "0.11.5"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features= ["env-filter"]}
rand = "0.8.5"

