[package]
name = "gambling-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-log = "2.0.0"
mysql_async = "0.31.3"
redis = { version = "0.23.0", features = ["tokio-comp"] }
serde = "1.0.159"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features= ["env-filter"]}
rand = "0.8.5"

[dependencies.serenity]
default-features = false
#builder, cache, client, gateway, http, model, utils, and rustls_backend
features = ["client", "gateway", "http", "model", "utils", "rustls_backend", "cache", "builder"]
ver = "0.11.5"